[package]
name = "deno_builder"
version = "1.43.3"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
deno_runtime = { workspace = true, features = [
    "include_js_files_for_snapshotting",
    "only_snapshotted_js_sources",
] }
deno_core = { workspace = true, features = [
    "include_js_files_for_snapshotting",
] }
lazy-regex.workspace = true
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true
glibc_version = "0.1.2"
flate2 = { workspace = true, features = ["default"] }
